# devOps-yadro-2025

./: Dockerfile  Jenkinsfile  README.md  docker-compose.yml  main.py  pyproject.toml
ansible/: README.md  ansible.cfg  playbook.yml  secrets.yml  vault_pass.txt
ansible/inventory/production/: hosts.yml
ansible/inventory/production/group_vars/: nodes.yml
ansible/inventory/production/host_vars/: master.yml  worker1.yml  worker2.yml
ansible/playbooks/production/: agents.yml  cluster.yml  install_cri_o.yml  install_k8s_utils.yml  prepare_nodes.yml
ansible/roles/agents/defaults/: main.yml
ansible/roles/agents/handlers/: main.yml
ansible/roles/agents/tasks/: main.yml
ansible/roles/agents/templates/: jenkins-agent.service.j2
ansible/roles/agents/vars/: main.yml
ansible/roles/check-net-raw/tasks/: main.yml
collections/: bruno_currency.json  postman_currency.json
docs/: ARCHITECTURE.md  CI_AUTOMATION_JENKINS.md
docs/hw1/: intro.md
kubernetes/: Network.md  README.MD
kubernetes/helm/chart/: .helmignore  Chart.yaml  Taskfile.yaml  manifest.yaml  values.yaml
kubernetes/manifests/namespaces/: bakhilin.yml
kubernetes/nginx/: nginx_default.conf
kubernetes/scripts/: stop_node.sh
kubernetes/scripts/helm/: monitoring.sh
kubernetes/scripts/preparation/: connect-nodes.sh  install-calico-master.sh  install-calico-plugin.sh
src/cache/: cache.py  currency_cache.py  in_memory_cache.py  lru_algo.py  redis_cache.py
src/conf/: config.py  config_service.py
src/entities/: currency.py
src/service/: bank_api.py  routes.py
tests/: test_bank_service_api.py
(+30 files in other folders)
