[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["n.bakhilin <bahilinnikita04@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
requests = "^2.32.3"
xmltodict = "^0.14.2"
pytest = "^8.3.4"
dotenv = "^0.9.9"
redis = "^5.2.1"
requests-mock = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
